[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revTongYi"
version = "0.1.0.0"
authors = [
  { name="xw5xr6", email="xw5xr6@hotmail.com" },
  { name="leeeduke", email="dukelee652@gmail.com" }
]
description = "阿里通义千问逆向工程API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fake-useragent",
    "requests",
    "filetype"
]

[project.urls]
"Homepage" = "https://github.com/leeeduke/revTongYi"
"Bug Tracker" = "https://github.com/leeeduke/revTongYi/issues"